# tempra

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  justfile
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/apply/: mod.rs
src/audit/: mod.rs
src/check/: mod.rs
src/cli/: mod.rs
src/common/: error.rs  exec.rs
src/config/: mod.rs
src/detection/: mod.rs
src/knowledge/: mod.rs  schema.rs
src/plan/: mod.rs
src/providers/: mod.rs
src/providers/firewall/: mod.rs  ufw.rs
src/providers/package/: apt.rs  mod.rs
src/providers/service/: mod.rs  systemd.rs
src/template/: mod.rs
