[package]
name = "tempra"
version = "0.0.1"
edition = "2024"
description = "Server hardening tool. Single binary. Knowledge built-in."
license = "MIT OR Apache-2.0"
repository = "https://github.com/tempra-sh/tempra"
homepage = "https://tempra.sh"
readme = "README.md"
rust-version = "1.85"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rust-ini = "0.21.3"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.8"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[dev-dependencies]
tempfile = "3.27.0"
